--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h1 class="text-uppercase">
-            <strong>[Your Full Name]</strong>
+            <strong> Achmad Fahriza </strong>
           </h1>
           <hr class="divider my-4" />
         </div>
         <div class="col-lg-8 mx-auto">
-          <p class="text-faded text-black mb-5">[A brief introduction about me]</p>
+          <p class="text-faded text-black mb-5">I'm currently Informatics Student at Telkom University</p>
           <p class="text-italic font-weight-bold mb-5">[Current Job/Speciality, Quote, etc.]</a></p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
         </div>
