--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
         <div class="col-lg-8 mx-auto">
           <p class="text-faded text-black mb-5">I'm currently Informatics Student at Telkom University</p>
-          <p class="text-italic font-weight-bold mb-5">[Current Job/Speciality, Quote, etc.]</a></p>
+          <p class="text-italic font-weight-bold mb-5">"High without having to put down others, Go up without having to step on others"</a></p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
         </div>
       </div>
@@ -104,29 +104,30 @@
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
           <i class="fa fa-4x fa-id-card-o text-faded sr-icons"></i>
           <h3 class="text-white">Degree</h3>
-          <p class="text-faded">Bachelor of Science in Computer Science from<br/>
+          <p class="text-faded">Soon<br/>
           <a class="text-white-link" href="https://telkomuniversity.ac.id/" class="text-blue">Telkom University</a></p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center div-padding-fix mb-4">
           <i class="fa fa-4x fa-graduation-cap text-faded sr-icons"></i>
           <h3 class="text-white">Graduation</h3>
-          <p class="text-faded">Graduated in [Month Year] [with Summa Cum Laude]</p>
+          <p class="text-faded">Soon</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
           <i class="fa fa-4x fa-code text-faded sr-icons"></i>
           <h3 class="text-white">Languages</h3>
-          <p class="text-faded no-margin">[C / C++, Python, C#]</p>
-          <p class="text-faded">[HTML5 (HTML/CSS/JS)]</p>
+          <p class="text-faded no-margin">C++, Python, Golang</p>
+          <p class="text-faded">HTML, CSS</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
           <i class="fa fa-4x fa-file-code-o text-faded sr-icons"></i>
           <h3 class="text-white">Skills</h3>
-					<p class="text-faded">[Special Skills ex: Full Stack Developer]</p>
-          <p class="text-faded no-margin">[C# .NET Back end]</p>
-          <p class="text-faded">[HTML5 Front end]</p>
+					<p class="text-faded">Special Skills : Team Work</p>
+          <p class="text-faded no-margin">Communication</p>
+          <p class="text-faded">Problem Solving</p>
+	  <p class="text-faded">Microsoft Excel</p>
         </div>
       </div>
 
@@ -148,30 +149,29 @@
         </div>
 	      <div class="col-sm-12 text-center mt-4 mb-4">
           <i class="fa fa-4x fa-rocket text-primary sr-icons"></i>
-          <h3 class="mt-4 mb-4">[Current Job/Speciality]</h3>
-          <p class="text-muted">[Month year] to Present: <span class="RtnRed">[Workplace]</span></p>
+          <h3 class="mt-4 mb-4">Soon</h3>
+          <p class="text-muted">Soon<span class="RtnRed">Soon</span></p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
-          <h3 class="mt-4 mb-4">[Past Experience]</h3>
-          <p class="text-muted">[Month year] to [Month year]: [Location]</p>
+          <h3 class="mt-4 mb-4">Soon</h3>
+          <p class="text-muted">Soon</p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
-          <h3 class="mt-4 mb-4">[Past Experience/Activity]</h3>
-          <p class="text-muted">[Month year] to [Month year]: [Location]</p>
+          <h3 class="mt-4 mb-4">Soon</h3>
+          <p class="text-muted">Soon</p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-android text-primary sr-icons"></i>
           <i class="fa fa-4x fa-server text-primary sr-icons ml-4"></i>
           <h3 class="mt-4 mb-4">Technical Intern</h3>
-          <p class="text-muted mb-4">[Year]: [Location]</p>
-          <p class="text-muted mb-4">[Year]: [Location]</p>
+          <p class="text-muted mb-4">Soon</p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-pied-piper text-primary sr-icons"></i>
           <h3 class="mt-4 mb-4">Research Assistant</h3>
-          <p class="text-muted">[Year]: [Location]</p>
+          <p class="text-muted">Soon</p>
         </div>
       </div>
 	    
@@ -189,7 +189,7 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading" id="githubb">
             <a class="text-white-link" href="#">
-						  [Link to GitHub Repository]
+						  https://github.com/youralfaa
               <i class="fa fa-1x fa-github-square" style="color:white"></i>
             </a>
           </h2>
@@ -207,8 +207,8 @@
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project (1).jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">[Repository 1]</div>
-                <div class="project-name">[repository description]</div>
+                <div class="project-category text-faded">youra-python </div>
+                <div class="project-name">TUBES python Telkom University 21/22</div>
               </div>
             </div>
           </a>
@@ -220,8 +220,8 @@
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project (2).jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">[Repository 2]</div>
-                <div class="project-name">[repository description]</div>
+                <div class="project-category text-faded">Soon</div>
+                <div class="project-name">...</div>
               </div>
             </div>
           </a>
@@ -233,8 +233,8 @@
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project (3).jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">[Repository 3]</div>
-                <div class="project-name">[repository description]</div>
+                <div class="project-category text-faded">Soon</div>
+                <div class="project-name">...</div>
               </div>
             </div>
           </a>
@@ -246,8 +246,8 @@
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project (4).jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">[Repository 4]</div>
-                <div class="project-name">[repository description]</div>
+                <div class="project-category text-faded">Soon</div>
+                <div class="project-name">...</div>
               </div>
             </div>
           </a>
@@ -259,8 +259,8 @@
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project (5).jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">[Repository 5]</div>
-                <div class="project-name">[repository description]</div>
+                <div class="project-category text-faded">Soon</div>
+                <div class="project-name">...</div>
               </div>
             </div>
           </a>
@@ -272,8 +272,8 @@
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project (6).jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">[Repository 6]</div>
-                <div class="project-name">[repository description]</div>
+                <div class="project-category text-faded">Soon</div>
+                <div class="project-name">...</div>
               </div>
             </div>
           </a>
