--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
 
       <!-- Updated with latest Creative -->
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">[Your Site Name Here]</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">youra</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" 
               data-toggle="collapse" data-target="#navbarResponsive" 
               aria-controls="navbarResponsive" aria-expanded="false" 
@@ -283,7 +283,7 @@
 			
 			<div class="text-center p-4">
         <a class="btn btn-black btn-xl js-scroll-trigger" href="#contact">
-        [Contact Me]
+        alfa1234586@gmail.com
 				</a>
       </div>
 			
@@ -300,10 +300,10 @@
         </div>
       </div>
       
-      <!-- Email, LinkedIn, and GitHub links -->
+      <!-- alfa1234586@gmail.com, linkedin.com/in/achmadfahriza, and  https://github.com/youralfa -->
       <div class="row">
         <div class="col-4 col-sm-4 col-lg-2 offset-lg-3 text-center">
-				  <a href="img/resume.pdf">
+				  <a href="...">
 						<i class="fa fa-envelope fa-4x sr-icons"></i>
 					</a>
 					<a href="img/resume.pdf">
@@ -331,7 +331,7 @@
   <!--  THIS IS THE FOOTER - displays a copyright notice and that Bootstrap powers this web page. -->
   <div class="container">
     <p class="text-center text-muted text-small mb-1">
-      [Full Name] &copy; [Year] - <span id="copyright-year"></span>. All rights reserved.
+      Achmad Fahriza &copy; 2023- <span id="copyright-year"></span>. All rights reserved.
       Powered by <a href="http://www.getbootstrap.com/" class="text-blue">Bootstrap</a>.
     </p>
     <p class="text-center text-muted text-small">
